--- a/public/index.html
+++ b/public/index.html
@@ -366,12 +366,8 @@
                 <a href="./index.html"><img src="img/logo.png" alt="" /></a>
               </div>
               <ul>
-                <li>team: 점메추 저메추</li>
-                <li>김세령</li>
-                <li>오준석</li>
-                <li>이서원</li>
-                <li>최하영</li>
-                <li>함형진</li>
+                <p>TEAM : 오늘 뭐 먹지? TOGETHER EAT!</p>
+                <p>김세령 오준석 이서원 최하영 함형진</p>
               </ul>
             </div>
           </div>
