--- a/public/mypage.html
+++ b/public/mypage.html
@@ -10,6 +10,8 @@
     <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
     <title>오늘 뭐 먹지?</title>
 
+  <link rel="icon">
+
     <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
@@ -217,12 +219,8 @@
                 <a href="./index.html"><img src="img/logo.png" alt="" /></a>
               </div>
               <ul>
-                <li>team: 점메추 저메추</li>
-                <li>김세령</li>
-                <li>오준석</li>
-                <li>이서원</li>
-                <li>최하영</li>
-                <li>함형진</li>
+                <p>TEAM : 오늘 뭐 먹지? TOGETHER EAT!</p>
+                <p>김세령 오준석 이서원 최하영 함형진</p>
               </ul>
             </div>
           </div>
@@ -236,7 +234,7 @@
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="footer__widget">
-              <h6>팀 점메추저메추 깃허브</h6>
+              <h6>팀 오늘뭐먹지 깃허브</h6>
               <p></p>
               <!-- <form action="#">
               <input type="text" placeholder="Enter your mail" />
