--- a/public/index.html
+++ b/public/index.html
@@ -219,7 +219,7 @@
         <div class="row">
           <div class="col-lg-3">
             <div class="header__logo">
-              <a href="./index.html"><img src="img/logo.png" alt="" /></a>
+              <a href="./index.html"><img src="img/twitter_header_photo_1.png" alt="" /></a>
             </div>
           </div>
           <nav class="humberger__menu__nav mobile-menu"></nav>
@@ -232,6 +232,7 @@
                 <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
                 <li><a href="./feed.html">피드</a></li>
                 <li><a href="./mypage.html">마이페이지용</a></li>
+                <li><a href="./kakaologin.html">소셜로그인 테스트</a></li>
               </ul>
             </nav>
           </div>
