fix: 프론트엔드 작업
1. 로그인 시 로그아웃 버튼 생성
2. 로그아웃 시 로그인 모달 생성되는 문제 수정
3. 로그인 후 다른페이지>홈페이지 이동 시 로그인 버튼이 보이는 문제 수정
4. 마이페이지 버튼 css수정
5. useful링크에 마이페이지 등록

--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,6 @@
                 <li><a href="./foodlist.html">메뉴판</a></li>
                 <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
                 <li><a href="./feed.html">피드</a></li>
-                <li><a href="./mypage.html">마이페이지용</a></li>
               </ul>
             </nav>
           </div>
@@ -376,7 +375,7 @@
               <h6>Useful Links</h6>
               <ul>
                 <li><a href="./terms.html">이용 약관</a></li>
-                <li><a href="./checkout.html">마이페이지</a></li>
+                <li><a href="./mypage.html">마이페이지</a></li>
               </ul>
             </div>
           </div>
