--- a/public/mypage.html
+++ b/public/mypage.html
@@ -116,10 +116,6 @@
                 <div class="header__top__right__auth">
                   <a href="#"><i class="fa fa-github"></i></a>
                 </div>
-                <div class="header__top__right__auth">
-                  <a href="#" id="signupLink"
-                      ><i class="fa fa-user"></i>친구</a>
-              </div>
             </div>
           </div>
         </div>
@@ -183,11 +179,11 @@
                 </div>
               </div>  
              </section>
-            <div>
+            <div style="text-align: center;">
               <button id="toggle-modal-button">유저 정보 수정</button>
             </div>
              <!-- 모달 창 -->
-              <div id="modal" style="display: none;">
+              <div id="modal" style="display: none; text-align: center; margin-top: 20px;">
                 <label for="newNick_Name">변경할 닉네임:</label>
                <input type="newNick_Name" id="newNick_Name">
                 <label for="password">현재 비밀번호:</label>
@@ -196,11 +192,11 @@
                 <input type="password" id="new-password">
                 <button id="update-password-button" type="submit">수정하기</button>
               </div>
-               <div>
+               <div style="text-align: center; margin-top: 50px;">
                 <button id="toggle-modal-button-delete">회원 탈퇴</button>
                 </div>
                <!-- 모달 창 -->
-                <div id="modal-delete" style="display: none;">
+                <div id="modal-delete" style="display: none; text-align: center; margin-top: 20px;">
                   <label for="passwordDelete1">현재 비밀번호:</label>
                   <input type="password" id="passwordDelete1">
                   <label for="passwordDelete2">비밀번호 확인:</label>
