feat: 찜목록 페이지 완성 및 프론트 - 백앤드 연결 favoritelist.html favoritelist.js

--- a/public/favoritelist.html
+++ b/public/favoritelist.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>오늘 뭐 먹지?</title>
 
   <link rel="icon">
@@ -28,6 +28,10 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/favoritelist.css" type="text/css" />
+
+        <!-- script import -->
+        <script src="./src/favoritelist.js" defer></script>
+
   </head>
 
   <body>
@@ -90,7 +94,7 @@
 
 <!-- Main Content -->
 
-<h2 class="favorite-name display-4 mt-5">오준석 님의 찜목록</h2>
+<h2 class="favorite-name display-4 mt-5">고객님의 찜목록</h2>
 <div class="content-wrapper mt-5"> 
   <div class="restaurant mb-4">
     <!-- 체크 박스 추가 -->
