--- a/public/feed-create.html
+++ b/public/feed-create.html
@@ -13,6 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap"
       rel="stylesheet"
     />
+    <!-- bootstrap 적용을 위한 링크(모달창) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
@@ -23,8 +25,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css" />
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./src/feed-create.js" defer></script>
+    <link rel="stylesheet" href="css/modaltest.css" type="text/css">
   </head>
 
   <body>
@@ -32,48 +33,61 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
-    <!-- Header Section Begin -->
-    <header class="header">
-      <div class="header__top">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="header__top__left"></div>
-            </div>
-            <div class="col-lg-6">
-              <div class="header__top__right">
-                  <a href="#"><i class="fa fa-github"></i></a>
+        <!-- 탑바 시작 -->
+        <header class="header">
+          <div class="header__top">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-6 col-md-6">
+                  <div class="header__top__left">
+                    <ul>
+                    </ul>
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                  <div class="header__top__right">
+                    <div class="header__top__right__auth d-flex">
+                      <a href="#" data-bs-toggle="modal" data-bs-target="#signModal">
+                        <i class="fa fa-user"></i> 회원가입&nbsp;&nbsp;&nbsp;
+                      </a>
+                      <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal">
+                        <i class="fa fa-user"></i>로그인
+                      </a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
-            <div class="header__logo">
-              <a href="./index.html"><img src="img/logo.png" alt="" /></a>
+          <div class="container">
+            <div class="top-row d-flex justify-content-between align-items-center">
+                <div class="col-lg-3" style="max-width: 150px;">
+                    <div class="header__logo">
+                        <a href="./index.html"><img src="img/logo.png" alt="" /></a>
+                    </div>
+                </div>
+                <nav class="humberger__menu__nav mobile-menu"></nav>
+                <div class="col-lg-8" style="max-width: 1000px;">
+                    <nav class="header__menu">
+                        <ul>
+                            <li class="active"><a href="./index.html">홈</a></li>
+                            <li><a href="./preference.html">선호도</a></li>
+                            <li><a href="./foodlist.html">메뉴판</a></li>
+                            <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
+                            <li><a href="./feed.html">피드</a></li>
+                            <li><a href="./mypage.html">마이페이지용</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-lg-3" style="max-width: 200px; text-align: center;">
+                    <div class="header__cart">
+                        <div class="header__cart__price">오늘의 메뉴: <span>차돌짬뽕</span></div>
+                    </div>
+                </div>
             </div>
-          </div>
-          <nav class="humberger__menu__nav mobile-menu"></nav>
-          <div class="col-lg-6">
-            <nav class="header__menu">
-              <ul>
-                <li><a href="./index.html">홈</a></li>
-                <li><a href="./preference.html">선호도</a></li>
-                <li><a href="./foodlist.html">메뉴판</a></li>
-                <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
-                <li class="active"><a href="./feed.html">피드</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="col-lg-3">
-            </div>
-          </div>
         </div>
-    </header>
-    <!-- Header Section End -->
+        </header>
+    <!-- 탑바 끝 -->
     <!-- Main Section Begin -->
     <div class="contact-form spad">
         <div class="container">
@@ -122,41 +136,38 @@
     <footer class="footer spad">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="footer__about">
-              <div class="footer__about__logo">
-                <a href="./index.html"><img src="img/logo.png" alt="" /></a>
+          <div class="col-lg-12">
+            <div class="footer__copyright">
+              <!-- GitHub Icon and Links -->
+              <div class="footer__github">
+                <!-- GitHub Links -->
+                <a href="https://github.com/Final-Project-mechu" target="_blank">
+                  <i class="fa fa-github">&nbsp;&nbsp;GitHub&nbsp;</i>  
+                </a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+                <!-- Notion Link -->
+                <a href="https://www.notion.so/your_notion_page" target="_blank">Notion</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+                <!-- Terms of Service Link -->
+                <a href="https://www.yourwebsite.com/terms" target="_blank">이용약관</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
               </div>
-              <ul>
-                <p>TEAM : 오늘 뭐 먹지? TOGETHER EAT!</p>
-                <p>김세령 오준석 이서원 최하영 함형진</p>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-5 offset-lg-1">
-            <div class="footer__widget">
-              <h6>Useful Links</h6>
-              <ul>
-                <li><a href="./terms.html">이용 약관</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-12">
-            <div class="footer__widget">
-              <h6>GitHub</h6>
-              <div class="footer__widget__social">
-                <a href="https://github.com/Final-Project-mechu"
-                  ><i class="fa fa-github"></i
-                ></a>
+              <hr> <!-- Horizontal Line -->
+              <div class="footer__copyright__text">
+                <p>
+                  
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  Copyright &copy;
+                  <script>
+                    document.write(new Date().getFullYear());
+                  </script>
+                  All rights reserved | This page is made by TEAM TOGETHER EAT! 김세령 오준석 이서원 최하영 함형진
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
         </div>
       </div>
     </footer>
-  <!-- Footer Section End -->
+    <!-- Footer Section End -->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
