--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,7 @@
                 <input type="인증 번호"
                        class="modal-input"
                        placeholder="비밀번호"
+                       id="signupPassword"
                        required>
               </div>
             </div>
@@ -107,6 +108,7 @@
               <div class="col">
                 <input type="인증 번호"
                        class="modal-input"
+                       id="signupPasswordConfirm"
                        placeholder="비밀번호 확인"
                        required>
               </div>
@@ -116,6 +118,7 @@
                 <input type="code"
                        class="modal-input"
                        placeholder="닉네임"
+                       id="signupNickname"
                        required>
               </div>
             </div>
@@ -165,6 +168,7 @@
               <div class="row mb-3">
                 <div class="col">
                   <input type="code"
+                         id="loginEmail"
                          class="modal-input"
                          placeholder="이메일"
                          required>
@@ -173,6 +177,7 @@
               <div class="row mb-3">
                 <div class="col">
                   <input type="code"
+                         id="loginPass"
                          class="modal-input"
                          placeholder="비밀번호"
                          required>
@@ -189,6 +194,8 @@
             <button
               type="button"
               class="signbutton"
+              id="loginButton"
+              onclick="login()"
             >
               로그인
             </button>
@@ -211,10 +218,10 @@
             <div class="col-lg-6 col-md-6">
               <div class="header__top__right">
                 <div class="header__top__right__auth d-flex">
-                  <a href="#" data-bs-toggle="modal" data-bs-target="#signModal">
+                  <a href="#" data-bs-toggle="modal" data-bs-target="#signModal" id="signClick">
                     <i class="fa fa-user"></i> 회원가입&nbsp;&nbsp;&nbsp;
                   </a>
-                  <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal">
+                  <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal" id="loginClick">
                     <i class="fa fa-user"></i>로그인
                   </a>
                 </div>
