--- a/public/feed.html
+++ b/public/feed.html
@@ -2,10 +2,6 @@
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Ogani Template" />
-    <meta name="keywords" content="Ogani, unica, creative, html" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>오늘 뭐 먹지?</title>
 
     <!-- bootstrap 적용을 위한 링크(모달창) -->
@@ -276,7 +272,7 @@
                     >좋아요순</a
                   >
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a
                     class="nav-link"
                     data-toggle="tab"
@@ -285,7 +281,7 @@
                     aria-selected="false"
                     >최신순</a
                   >
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
