--- a/public/mypage.html
+++ b/public/mypage.html
@@ -108,8 +108,8 @@
         </div>
       </section>
       <div class="mypage-buttons">
-        <button data-bs-toggle="modal" data-bs-target="#modifyUserModal">내 정보 수정</button>
-        <button data-bs-toggle="modal" data-bs-target="#deleteUserModal">회원 탈퇴</button>
+        <button data-bs-toggle="modal" data-bs-target="#modifyUserModal" class="site-btn">내 정보 수정</button>
+        <button data-bs-toggle="modal" data-bs-target="#deleteUserModal" class="site-btn">회원 탈퇴</button>
       </div>
     </section>
     <!-- 유저 정보 수정 모달 시작 -->
