--- a/public/feed-create.html
+++ b/public/feed-create.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
     <title>오늘 뭐 먹지?</title>
 
     <!-- Google Font -->
@@ -124,7 +125,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 text-center">
-                        <button id="writeBtn" type="button" class="site-btn">글쓰기</button>
+                        <button id="writeBtn" type="button" class="site-btn" onclick="feedCreate()">글쓰기</button>
                         <button id="cancelBtn" class="site-btn" type="button" onclick="redirectToFeedPage()">취소</button>
                     </div>
                 </div>
@@ -168,6 +169,7 @@
       </div>
     </footer>
     <!-- Footer Section End -->
+    <script src="./src/feed-create.js"></script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
