--- a/public/terms.html
+++ b/public/terms.html
@@ -272,12 +272,67 @@
         <form action="#">
           <div class="row">
             <div class="col-lg-12 text-center">
-              <p>1. 약관 1~~~</p>
+              <p>
+                제 1조(목적) <br />
+                본 약관은 오늘뭐먹지 팀이 운영하는 메뉴 추천 서비스(이하
+                "서비스")와 관련하여 오늘뭐먹지 팀과 회원 간의 권리와 의무 및
+                책임사항을 규정함을 목적으로 합니다.
+              </p>
               <br />
-              <p>2. 약관 2~~~</p>
+              <p>
+                제 2조(정의) <br />
+                본 약관에서 사용하는 용어는 다음과 같습니다. "회원"이란 본
+                약관에 동의하고 오늘뭐먹지 팀과 서비스 이용 계약을 체결하여
+                아이디(ID)를 부여받은 자를 말합니다. "아이디(ID)"란 회원 식별과
+                서비스 이용을 회원이 설정하고 오늘뭐먹지 팀이 승인한 문자 또는
+                숫자의 조합을 말합니다. "비밀번호"란 회원의 정보 보호와 본인
+                확인을 위하여 회원이 설정하고 오늘뭐먹지 팀이 승인한 문자 또는
+                숫자의 조합을 말합니다. "게시물"이란 회원이 서비스에 기사한
+                사진, 글, 음성, 영상 등 모든 정보나 자료를 말합니다.
+              </p>
               <br />
-              <p>3. 약관 3~~~</p>
-              <button onclick="admintransfer()">어드민 변환</button>
+              <p>
+                제 3조(약관의 효력및 변경) <br />
+                본 약관은 서비스 페이지에 게시함으로써 효력을 발생합니다.
+                오늘뭐먹지 팀은 필요한 경우 관련 법령에 위배되지 않는 범위
+                내에서 본 약관을 변경할 수 있습니다. 변경된 약관은 제1항과 같은
+                방법으로 공지함으로써 효력을 발생합니다.
+              </p>
+              <h2>개인정보 처리방침</h2>
+              <br />
+              <p>
+                제 1조(개인정보의 처리 목적) <br />
+                오늘뭐먹지 팀은 다음의 목적을 위하여 개인정보를 처리합니다.
+                처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지
+                않으며, 이용 목적이 변경될 시에는 별도의 동의를 받는 등 필요한
+                조치를 이행할 예정입니다. 회원 가입 및 관리 회원 가입 의사 확인,
+                회원 식별 및 인증, 회원 자격 유지 및 관리, 서비스 부정 이용 방지
+                등을 목적으로 개인정보를 처리합니다. 서비스 제공 맛집 추천 정보
+                공유, 다른 회원들과 소통할 수 있는 커뮤니티 기능 등을 목적으로
+                개인정보를 처리합니다.
+              </p>
+              <br />
+              <p>
+                제2조(개인정보의 처리 및 보유 기간) <br />
+                법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터
+                개인정보를 수집시에 동의 받은 개인정보 보유·이용기간 내에서
+                개인정보를 처리·보유합니다. 각각의 개인정보 처리 및 보유 기간은
+                다음과 같습니다. 회원 가입 및 관리: 회원 탈퇴 시까지 서비스
+                제공: 관계 법령 위반에 따른 수사·조사 등이 진행중인 경우에는
+                해당 수사·조사 종료 시까지 오늘뭐먹지 팀의 이익을 위해 필요한
+                경우에는 별도로 보유할 수 있습니다.
+              </p>
+              <br />
+              <p>
+                제3조(개인정보 보호책임자) <br />
+                오늘뭐먹지 팀은 개인정보 처리에 관한 업무를 총괄해서 책임지고,
+                개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을
+                위하여 개인정보 보호책임자를 지정하고 있습니다. 정보주체는
+                오늘뭐먹지 팀의 서비스를 이용하시면서 발생한 모든 개인정보 보호
+                관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보
+                보호책임자에게 문의하실 수 있습니다.
+              </p>
+              <!-- <button onclick="admintransfer()">어드민 변환</button> -->
             </div>
           </div>
         </form>
