fix foodlist.html js  수정

--- a/public/foodlist.html
+++ b/public/foodlist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Ogani Template" />
@@ -34,8 +34,10 @@
 
 <!-- Script -->
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="./src/foodlist.js" defer></script> 
 
-<script src="./src/foodlist.js" defer></script>  
+ 
+
   </head>
 
   <body>
@@ -353,6 +355,7 @@
     <!-- Footer Section End -->  
     <!-- 적용하려는 script 파일 -->
     <script src="./src/user.js" defer></script>
+    <script src="./src/foodlist.js" defer></script> 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -361,8 +364,7 @@
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/foodlist.js"></script>
+    <script src="js/main.js"></script>    
     <script></script>
 
   </body>
