fix: 프론트엔드 수정
아까 회의에서 이야기 나온 사항 전부 수정 완료
1. 홈페이지: 선호도 조사 버튼 추가, 탑바 버튼 크기 조정, 블로그 지우기,
   버튼 이름 변경 등
2. 선호도 페이지 삭제하기 위치 선택바 옆으로 이동
3. 메뉴 추천 페이지 버튼 CSS적용(1차)

--- a/public/preference.html
+++ b/public/preference.html
@@ -284,8 +284,8 @@
 
                 </form>
               </div>
-              <div class="hero__search__phone">
-                <a href="#" class="site-btn">삭제하기</a>
+              <div>
+                <a href="#" class="site-btn" id="prefer-delete">삭제하기</a>
               </div>
             </div>
 
