fix: html변경사항 전역 적용
1. 탑바 변경사항, 이용약관 링크 변경 사용하는 모든 html에 적용
2. 사용하지 않는 html 삭제

--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -128,11 +128,17 @@
           <div class="col-lg-6">
             <nav class="header__menu">
               <ul>
-                <li><a href="./index.html">홈</a></li>
-                <li><a href="./preference.html">선호도</a></li>
-                <li><a href="./foodlist.html">메뉴판</a></li>
-                <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
-                <li><a href="./feed.html">피드</a></li>
+                <li>
+                  <a id="tob-bar" href="./index.html">홈</a>
+                </li>
+                <li>
+                  <a id="tob-bar" href="./preference.html">선호도 조사</a>
+                </li>
+                <li>
+                  <a id="tob-bar" href="./menu-subscribe.html">메뉴 추천</a>
+                </li>
+                <li><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
+                <li><a id="tob-bar" href="./feed.html">피드</a></li>
               </ul>
             </nav>
           </div>
