--- a/public/foodlist-admin.html
+++ b/public/foodlist-admin.html
@@ -275,13 +275,19 @@
             <nav class="humberger__menu__nav mobile-menu"></nav>
             <div class="col-lg-8" style="max-width: 1000px;">
                 <nav class="header__menu">
-                    <ul>
-                        <li class="active"><a href="./index.html">홈</a></li>
-                        <li><a href="./preference.html">선호도</a></li>
-                        <li><a href="./foodlist.html">메뉴판</a></li>
-                        <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
-                        <li><a href="./feed.html">피드</a></li>
-                    </ul>
+                  <ul>
+                    <li>
+                      <a id="tob-bar" href="./index.html">홈</a>
+                    </li>
+                    <li>
+                      <a id="tob-bar" href="./preference.html">선호도 조사</a>
+                    </li>
+                    <li>
+                      <a id="tob-bar" href="./menu-subscribe.html">메뉴 추천</a>
+                    </li>
+                    <li><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
+                    <li><a id="tob-bar" href="./feed.html">피드</a></li>
+                  </ul>
                 </nav>
             </div>
             <div class="col-lg-3" style="max-width: 200px; text-align: center;">
@@ -466,7 +472,8 @@
                   <!-- Notion Link -->
                   <a href="https://www.notion.so/5-b54b9d92a97848b8acbb82453d9436f9" target="_blank">Notion</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
                   <!-- Terms of Service Link -->
-                  <a href="https://www.yourwebsite.com/terms" target="_blank">이용약관</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+                  <a href="./terms.html" target="_blank">이용약관</a
+                    >&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
                 </div>
                 <hr> <!-- Horizontal Line -->
                 <div class="footer__copyright__text">
