--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -285,11 +285,17 @@
           <div class="col-lg-8" style="max-width: 1000px">
             <nav class="header__menu">
               <ul>
-                <li class="active"><a href="./index.html">홈</a></li>
-                <li><a href="./preference.html">선호도</a></li>
-                <li><a href="./foodlist.html">메뉴판</a></li>
-                <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
-                <li><a href="./feed.html">피드</a></li>
+                <li>
+                  <a id="tob-bar" href="./index.html">홈</a>
+                </li>
+                <li>
+                  <a id="tob-bar" href="./preference.html">선호도 조사</a>
+                </li>
+                <li class="active">
+                  <a id="tob-bar" href="./menu-subscribe.html">메뉴 추천</a>
+                </li>
+                <li><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
+                <li><a id="tob-bar" href="./feed.html">피드</a></li>
               </ul>
             </nav>
           </div>
@@ -367,8 +373,7 @@
                   >Notion</a
                 >&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
                 <!-- Terms of Service Link -->
-                <a href="https://www.yourwebsite.com/terms" target="_blank"
-                  >이용약관</a
+                <a href="./terms.html" target="_blank">이용약관</a
                 >&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
               </div>
               <hr />
