feat. 피드 write 접근제한 / 회원가입, 로그인 시 페이지 유도
피드 write 접근제한 :
1) 피드 write 클릭 시 로그인하지 않았다면 alert
2) 피드 write 페이지로 접근 시 로그인하지 않았다면 alert

회원가입, 로그인 시 페이지 유도
1) 회원가입 시 선호도 조사페이지로 바로 가기
2) 로그인 시 메뉴추천 페이지로 바로 가기

--- a/public/feed.html
+++ b/public/feed.html
@@ -295,8 +295,9 @@
             </div>
             <div class="feedbutton-wrap">
               <button
-                onclick="location.href='feed-create.html'"
+                onclick="writeClick()"
                 class="site-btn"
+                id="writeButton"
               >
                 WRITE
               </button>
