닉네임 가져오는 로직 추가

--- a/public/mypage.html
+++ b/public/mypage.html
@@ -125,15 +125,29 @@
               <div class="section-title">
                 <h2>마이페이지</h2>
               </div>
+              <div id="profile-nickName" style="margin-bottom: 50px">
+                닉네임:
+              </div>
             </div>
+          </div>
+          <div style="margin-bottom: 50px">
+            <img id="random-photo" src="" alt="랜덤 사진" />
           </div>
         </div>
       </section>
       <div class="mypage-buttons">
-        <button data-bs-toggle="modal" data-bs-target="#modifyUserModal">
+        <button
+          data-bs-toggle="modal"
+          class="site-btn"
+          data-bs-target="#modifyUserModal"
+        >
           내 정보 수정
         </button>
-        <button data-bs-toggle="modal" data-bs-target="#deleteUserModal">
+        <button
+          data-bs-toggle="modal"
+          class="site-btn"
+          data-bs-target="#deleteUserModal"
+        >
           회원 탈퇴
         </button>
       </div>
