--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="password"
+                    type="인증 번호"
                     class="modal-input"
                     placeholder="비밀번호"
                     id="signupPassword"
@@ -122,7 +122,7 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="password"
+                    type="인증 번호"
                     class="modal-input"
                     id="signupPasswordConfirm"
                     placeholder="비밀번호 확인"
@@ -194,7 +194,7 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="password"
+                    type="code"
                     id="loginPass"
                     class="modal-input"
                     placeholder="비밀번호"
@@ -255,12 +255,7 @@
                   >
                     <i class="fa fa-user"></i>로그인
                   </a>
-                  <a
-                    href="#"
-                    id="logoutClick"
-                    class="logoutClick d-none"
-                    onclick="signOut()"
-                  >
+                  <a href="#" id="logoutClick" class="logoutClick d-none" onclick="signOut()">
                     <i class="fa fa-user"></i> 로그아웃&nbsp;&nbsp;&nbsp;
                   </a>
                   <a
@@ -289,17 +284,11 @@
           <div class="col-lg-8" style="max-width: 1000px">
             <nav class="header__menu">
               <ul>
-                <li class="active">
-                  <a id="tob-bar" href="./index.html">홈</a>
-                </li>
-                <li>
-                  <a id="tob-bar" href="./preference.html">선호도 조사</a>
-                </li>
-                <li>
-                  <a id="tob-bar" href="./menu-subscribe.html">메뉴 추천</a>
-                </li>
-                <li><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
-                <li><a id="tob-bar" href="./feed.html">피드</a></li>
+                <li class="active"><a href="./index.html">홈</a></li>
+                <li><a href="./preference.html">선호도</a></li>
+                <li><a href="./foodlist.html">메뉴판</a></li>
+                <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
+                <li><a href="./feed.html">피드</a></li>
               </ul>
             </nav>
           </div>
@@ -317,21 +306,20 @@
     <!-- 탑바 끝 -->
     <!-- Featured Section Begin -->
     <section class="featured-spad">
-      <!-- <div
+      <div
         class="hero__item set-bg"
         style="display: flex; justify-content: center; align-items: center"
         data-setbg="img/hero/pancake.jpg"
       >
-        <div class="hero__text"> -->
-      <div style="margin-bottom: 100px">
-        <h2 style="color: black; margin-top: 50px">TOGETHER EAT!</h2>
-        <a href="menu-subscribe.html" class="main-btn">메뉴 추천</a>
-        <a href="./preference.html" class="main-btn">선호도 조사</a>
+        <div class="hero__text">
+          <h2 style="color: black; margin-top: 50px">TOGETHER EAT!</h2>
+          <a href="menu-subscribe.html" class="main-btn">메뉴 추천받기</a>
+        </div>
       </div>
     </section>
     <!-- Featured Section End -->
     <!-- Blog Section Begin -->
-    <!-- <section class="from-blog spad">
+    <section class="from-blog spad">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -341,7 +329,7 @@
           </div>
         </div>
         <div class="row">
-          피드 나누기 : 이 부분을 복사하면 피드가 여러 개 복사됨
+          <!-- 피드 나누기 : 이 부분을 복사하면 피드가 여러 개 복사됨 -->
           <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="blog__item">
               <div class="blog__item__pic">
@@ -428,7 +416,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- Blog Section End -->
 
     <!-- Footer Section Begin -->
@@ -478,7 +466,6 @@
     <!-- Footer Section End -->
     <!-- 적용하려는 script 파일 -->
     <script src="./src/user.js" defer></script>
-    <script src="./src/dailymenu.js" defer></script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
