--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -51,6 +51,7 @@
     <div id="preloder">
       <div class="loader"></div>
     </div>
+    <!-- Header Section Begin -->
     <!-- 가입 모달 -->
     <div
       class="modal fade"
@@ -79,6 +80,17 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
+                    id="admin"
+                    class="modal-input"
+                    placeholder="일반회원=0, 관리자=1"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col">
+                  <input
+                    id="signupEmail"
                     type="email"
                     class="modal-input"
                     placeholder="이메일 주소"
@@ -88,8 +100,9 @@
                 <div class="col-auto">
                   <button
                     class="signbutton btn-block"
-                    id="verifyEmailBtn"
+                    id="signupEmailBtn"
                     type="button"
+                    onclick="verifyEmail()"
                   >
                     발송
                   </button>
@@ -99,13 +112,19 @@
                 <div class="col">
                   <input
                     type="인증 번호"
+                    id="codeInput"
                     class="modal-input"
                     placeholder="인증 코드"
                     required
                   />
                 </div>
                 <div class="col-auto">
-                  <button class="signbutton" id="verifyEmailBtn" type="button">
+                  <button
+                    class="signbutton"
+                    id="codeInputButton"
+                    type="button"
+                    onclick="verifyCode()"
+                  >
                     확인
                   </button>
                 </div>
@@ -113,9 +132,10 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="인증 번호"
+                    type="password"
                     class="modal-input"
                     placeholder="비밀번호"
+                    id="signupPassword"
                     required
                   />
                 </div>
@@ -123,8 +143,9 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="인증 번호"
+                    type="password"
                     class="modal-input"
+                    id="signupPasswordConfirm"
                     placeholder="비밀번호 확인"
                     required
                   />
@@ -136,6 +157,7 @@
                     type="code"
                     class="modal-input"
                     placeholder="닉네임"
+                    id="signupNickname"
                     required
                   />
                 </div>
@@ -148,14 +170,7 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button
-              type="button"
-              class="signbutton"
-              data-bs-toggle="modal"
-              data-bs-target="#signupModal"
-            >
-              회원 가입
-            </button>
+            <button class="signButton" onclick="sign(event)">회원 가입</button>
           </div>
         </div>
       </div>
@@ -190,6 +205,7 @@
                 <div class="col">
                   <input
                     type="code"
+                    id="loginEmail"
                     class="modal-input"
                     placeholder="이메일"
                     required
@@ -199,7 +215,8 @@
               <div class="row mb-3">
                 <div class="col">
                   <input
-                    type="code"
+                    type="password"
+                    id="loginPass"
                     class="modal-input"
                     placeholder="비밀번호"
                     required
@@ -217,8 +234,8 @@
             <button
               type="button"
               class="signbutton"
-              data-bs-toggle="modal"
-              data-bs-target="#signupModal"
+              id="loginButton"
+              onclick="login()"
             >
               로그인
             </button>
@@ -258,7 +275,12 @@
                   >
                     <i class="fa fa-user"></i>로그인
                   </a>
-                  <a href="#" id="logoutClick" class="logoutClick d-none">
+                  <a
+                    href="#"
+                    id="logoutClick"
+                    class="logoutClick d-none"
+                    onclick="signOut()"
+                  >
                     <i class="fa fa-user"></i> 로그아웃&nbsp;&nbsp;&nbsp;
                   </a>
                   <a
@@ -285,11 +307,17 @@
           <div class="col-lg-8" style="max-width: 1000px">
             <nav class="header__menu">
               <ul>
-                <li class="active"><a href="./index.html">홈</a></li>
-                <li><a href="./preference.html">선호도</a></li>
-                <li><a href="./foodlist.html">메뉴판</a></li>
-                <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
-                <li><a href="./feed.html">피드</a></li>
+                <li>
+                  <a id="tob-bar" href="./index.html">홈</a>
+                </li>
+                <li>
+                  <a id="tob-bar" href="./preference.html">선호도 조사</a>
+                </li>
+                <li class="active">
+                  <a id="tob-bar" href="./menu-subscribe.html">메뉴 추천</a>
+                </li>
+                <li><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
+                <li><a id="tob-bar" href="./feed.html">피드</a></li>
               </ul>
             </nav>
           </div>
@@ -367,8 +395,7 @@
                   >Notion</a
                 >&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
                 <!-- Terms of Service Link -->
-                <a href="https://www.yourwebsite.com/terms" target="_blank"
-                  >이용약관</a
+                <a href="./terms.html" target="_blank">이용약관</a
                 >&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
               </div>
               <hr />
@@ -393,6 +420,7 @@
     <!-- Footer Section End -->
     <!-- 적용하려는 script 파일 -->
     <script src="./src/user.js" defer></script>
+    <script src="./src/dailymenu.js" defer></script>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
