fix: 로그인이 되지 않았을 때 홈 페이지 외 모든 페이지 접근 제한
1. 로그인이 되지 않았을 때 홈 페이지 외 모든 페이지 접근 제한
2. 로그아웃 메시지 변경 (로그아웃 완료)

--- a/public/preference.html
+++ b/public/preference.html
@@ -418,6 +418,7 @@
     <!-- 적용하려는 script 파일 -->
     <script src="./src/user.js" defer></script>
     <script src="./src/dailymenu.js" defer></script>
+    <script src="./src/checkLogin.js"></script>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
