--- a/public/mypage.html
+++ b/public/mypage.html
@@ -530,6 +530,7 @@
     <!-- 적용하려는 script 파일 -->
     <script src="./src/user.js" defer></script>
     <script src="./src/mypage.js"></script>
+    <script src="./src/checkLogin.js"></script>
     <!-- 적용하려는 script 파일 끝 -->
 
     <!-- Js Plugins -->
