--- a/public/terms.html
+++ b/public/terms.html
@@ -391,6 +391,7 @@
     </footer>
 
     <script src="./src/admin.js"></script>
+    <script src="./src/checkLogin.js"></script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
