--- a/public/favoritelist.html
+++ b/public/favoritelist.html
@@ -356,47 +356,43 @@
     <footer class="footer spad">
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-6">
-            <div class="footer__about">
-              <div class="footer__about__logo">
-                <a href="./index.html"><img src="img/logo.png" alt="" /></a>
-              </div>
-              <ul>
-                <p>TEAM : 오늘 뭐 먹지? TOGETHER EAT!</p>
-                <p>김세령 오준석 이서원 최하영 함형진</p>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
-            <div class="footer__widget">
-              <h6>Useful Links</h6>
-              <ul>
+          <div class="col-lg-12">
+            <div class="footer__copyright">
+              <!-- GitHub Icon and Links -->
+              <div class="footer__github">
+                <!-- GitHub Links -->
+                <a
+                  href="https://github.com/Final-Project-mechu"
+                  target="_blank"
+                >
+                  <i class="fa fa-github">&nbsp;&nbsp;GitHub&nbsp;</i> </a
+                >&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+                <!-- Notion Link -->
+                <a
+                  href="https://www.notion.so/5-b54b9d92a97848b8acbb82453d9436f9"
+                  target="_blank"
+                  >Notion</a
+                >&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+                <!-- Terms of Service Link -->
                 <a href="./terms.html" target="_blank">이용약관</a
-                  >&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-12">
-            <div class="footer__widget">
-              <h6>팀 오늘뭐먹지 깃허브</h6>
-              <p></p>
-              <!-- <form action="#">
-              <input type="text" placeholder="Enter your mail" />
-              <button type="submit" class="site-btn">Subscribe</button>
-            </form> -->
-              <div class="footer__widget__social">
-                <a href="https://github.com/Final-Project-mechu"
-                  ><i class="fa fa-github"></i
-                ></a>
-                <!-- <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-pinterest"></i></a> -->
+                >&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+              </div>
+              <hr />
+              <!-- Horizontal Line -->
+              <div class="footer__copyright__text">
+                <p>
+                  <!-- Link back to Colorlib can't be removed. Template is ldwicensed under CC BY 3.0. -->
+                  Copyright &copy;
+                  <script>
+                    document.write(new Date().getFullYear());
+                  </script>
+                  All rights reserved | This page is made by TEAM TOGETHER EAT!
+                  김세령 오준석 이서원 최하영 함형진
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-
         </div>
       </div>
     </footer>
