--- a/public/feed.html
+++ b/public/feed.html
@@ -254,7 +254,7 @@
                     id="loginClick"
                     class="loginClick"
                   >
-                    <i class="fa fa-user"></i>로그인
+                    <i class="fa fa-user"></i>로그인&nbsp;&nbsp;&nbsp;
                   </a>
                   <a
                     href="#"
@@ -262,14 +262,14 @@
                     class="logoutClick d-none"
                     onclick="signOut()"
                   >
-                    <i class="fa fa-user"></i> 로그아웃&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-user"></i>로그아웃&nbsp;&nbsp;&nbsp;
                   </a>
                   <a
                     href="./mypage.html"
                     id="mypageClick"
                     class="mypageClick d-none"
                   >
-                    <i class="fa fa-user"></i> 마이페이지
+                    <i class="fa fa-user"></i>마이페이지&nbsp;&nbsp;&nbsp;
                   </a>
                 </div>
               </div>
