--- a/public/feed-detail.html
+++ b/public/feed-detail.html
@@ -256,19 +256,26 @@
                     <i class="fa fa-user"></i>로그인
                   </a>
                   <a
-                    href="#"
-                    id="logoutClick"
-                    class="logoutClick d-none"
-                    onclick="signOut()"
+                    href="./favoritelist.html"
+                    id="favoriteClick"
+                    class="favoriteClick d-none"
                   >
-                    <i class="fa fa-user"></i> 로그아웃&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-user"></i>찜목록&nbsp;&nbsp;&nbsp;
                   </a>
                   <a
                     href="./mypage.html"
                     id="mypageClick"
                     class="mypageClick d-none"
                   >
-                    <i class="fa fa-user"></i> 마이페이지
+                    <i class="fa fa-user"></i>마이페이지&nbsp;&nbsp;&nbsp;
+                  </a>
+                  <a
+                    href="#"
+                    id="logoutClick"
+                    class="logoutClick d-none"
+                    onclick="signOut()"
+                  >
+                    <i class="fa fa-user"></i>로그아웃&nbsp;&nbsp;&nbsp;
                   </a>
                 </div>
               </div>
@@ -276,26 +283,18 @@
           </div>
         </div>
       </div>
-    <!-- Humberger End -->
-
-    <!--여기부터-->
-    <!--주석 처리한 부분은 필요 없다고 생각될 경우 제거 예정입니다.-->
-    <!-- Header Section Begin -->
-    <header class="header">
-      <div class="header__top">
-      </div>
       <div class="container">
-        <div class="row">
-          <div class="col-lg-3">
+        <div class="top-row d-flex justify-content-between align-items-center">
+          <div class="col-lg-3" style="max-width: 150px">
             <div class="header__logo">
               <a href="./index.html"><img src="img/logo.png" alt="" /></a>
             </div>
           </div>
           <nav class="humberger__menu__nav mobile-menu"></nav>
-          <div class="col-lg-6">
+          <div class="col-lg-8" style="max-width: 1000px">
             <nav class="header__menu">
               <ul>
-                <li>
+                <li class="active">
                   <a id="tob-bar" href="./index.html">홈</a>
                 </li>
                 <li>
@@ -309,17 +308,17 @@
               </ul>
             </nav>
           </div>
-          <!--모든 페이지에 적용하려면 컨테이너 col-lg-6의 </div> 라인 밑에 242번라인~247번라인을 복붙하면 됩니다.-->
-          <div class="col-lg-3">
+          <div class="col-lg-3" style="max-width: 200px; text-align: center">
             <div class="header__cart">
-              <div class="header__cart__price"></div>
+              <div class="header__cart__price">
+                오늘의 메뉴: <span>차돌짬뽕</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </header>
-    <!-- Header Section End -->
-
+    <!-- 탑바 끝 -->
     <!-- Hero Section Begin -->
     <section class="hero hero-normal">
       <div class="container">
