--- a/public/feed.html
+++ b/public/feed.html
@@ -254,7 +254,21 @@
                     id="loginClick"
                     class="loginClick"
                   >
-                    <i class="fa fa-user"></i>로그인&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-user"></i>로그인
+                  </a>
+                  <a
+                    href="./favoritelist.html"
+                    id="favoriteClick"
+                    class="favoriteClick d-none"
+                  >
+                    <i class="fa fa-user"></i>찜목록&nbsp;&nbsp;&nbsp;
+                  </a>
+                  <a
+                    href="./mypage.html"
+                    id="mypageClick"
+                    class="mypageClick d-none"
+                  >
+                    <i class="fa fa-user"></i>마이페이지&nbsp;&nbsp;&nbsp;
                   </a>
                   <a
                     href="#"
@@ -263,13 +277,6 @@
                     onclick="signOut()"
                   >
                     <i class="fa fa-user"></i>로그아웃&nbsp;&nbsp;&nbsp;
-                  </a>
-                  <a
-                    href="./mypage.html"
-                    id="mypageClick"
-                    class="mypageClick d-none"
-                  >
-                    <i class="fa fa-user"></i>마이페이지&nbsp;&nbsp;&nbsp;
                   </a>
                 </div>
               </div>
@@ -288,7 +295,7 @@
           <div class="col-lg-8" style="max-width: 1000px">
             <nav class="header__menu">
               <ul>
-                <li>
+                <li class="active">
                   <a id="tob-bar" href="./index.html">홈</a>
                 </li>
                 <li>
@@ -298,9 +305,7 @@
                   <a id="tob-bar" href="./menu-subscribe.html">메뉴 추천</a>
                 </li>
                 <li><a id="tob-bar" href="./foodlist.html">메뉴판</a></li>
-                <li class="active">
-                  <a id="tob-bar" href="./feed.html">피드</a>
-                </li>
+                <li><a id="tob-bar" href="./feed.html">피드</a></li>
               </ul>
             </nav>
           </div>
