회원가입 버튼 모달 정상화 클래스값이 대문자로 되어 있어서 소문자로 변경하였습니다.

--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button class="signButton" onclick="sign(event)">회원 가입</button>
+            <button class="signbutton" onclick="sign(event)">회원 가입</button>
           </div>
         </div>
       </div>
